--- a/_posts/2019-08-20-new.md
+++ b/_posts/2019-08-20-new.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title:  "数字媒体：榜样衰落，世界会变，我们前行 "
+author: 方军
 categories: [ Jekyll ]
 image: assets/images/3.jpg
 description: 引子：美国《大西洋月刊》近日发表文章称，“2017年却是媒体行业特别悲惨的一年 # Add post description (optional)
@@ -156,4 +157,4 @@ description: 引子：美国《大西洋月刊》近日发表文章称，“2017
 
 > 几乎每一种曾经有的媒体生意与内容生意都可能在数字世界被重新做一遍，而且每一次浪潮都可以重新做一遍。
 
-#### 方军，资深互联网人，知识专家，著有《付费：互联网知识经济的兴起》（2017.5），《付费产品版：知识产品经理手册》即将出版。
+ 方军，资深互联网人，知识专家，著有《付费：互联网知识经济的兴起》（2017.5），《付费产品版：知识产品经理手册》即将出版。
