--- a/_posts/2019-08-20-new.md
+++ b/_posts/2019-08-20-new.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "数字媒体：榜样衰落，世界会变，我们前行 "
-author: 方军
+author: kfriends
 categories: [ Jekyll ]
 image: assets/images/3.jpg
 description: 引子：美国《大西洋月刊》近日发表文章称，“2017年却是媒体行业特别悲惨的一年 # Add post description (optional)
