--- a/_posts/2019-08-20-new.md
+++ b/_posts/2019-08-20-new.md
@@ -3,7 +3,7 @@ layout: post
 title:  "数字媒体：榜样衰落，世界会变，我们前行 "
 author: kfriends
 categories: [ Jekyll ]
-image: assets/images/3.jpg
+image: http://pwsdfc69e.bkt.clouddn.com/demo1.jpg
 description: 引子：美国《大西洋月刊》近日发表文章称，“2017年却是媒体行业特别悲惨的一年 # Add post description (optional)
 ---
 引子：美国《大西洋月刊》近日发表文章称，“2017年却是媒体行业特别悲惨的一年 
@@ -26,6 +26,8 @@ description: 引子：美国《大西洋月刊》近日发表文章称，“2017
 > - 被赋能个体
 > - 自媒体广告与电商
 > - 知识付费
+
+![Image of Yaktocat](http://pwsdfc69e.bkt.clouddn.com/demo1.jpg)
 
 ## 2，36kr与一条：从内容到服务
 
