--- a/_posts/block100/2019-09-08-block100-01.md
+++ b/_posts/block100/2019-09-08-block100-01.md
@@ -4,7 +4,7 @@ title:  "block100 - 01"
 author: jane
 categories: [ Jekyll, tutorial ]
 image: assets/images/home.jpg
-tags: [sticky]
+tags: 
 description: Bucharest’s  its consolidation as the national capital of Romania late in the 19th century. First mentioned as the “Citadel of București” in 1459, it became the residence of the famous Wallachian prince Vlad III the Impaler. # Add post description (optional)
 ---
 
