--- a/_contracts/2020-03-01-metamask101.md
+++ b/_contracts/2020-03-01-metamask101.md
@@ -181,6 +181,10 @@ https://ropsten.etherscan.io/tx/0x155104f6afdd664397c6432431d6e4109fbcbb22b0ee9b
 
 ![IMAGE](/contracts/images/B2914EFCE5A220D0F683E2EF72EABC71.jpg =1920x1080)
 
+快知区块链教程 - 编程指南系列 - MetaMask 使用指南（MetaMask 101），2020年3月1日，V0.1.0
+
+---
+
 ## 附录1：重新登录的两种方式
 
 我们可以用两种方式重新登录：
