--- a/_contracts/2020-03-01-metamask101.md
+++ b/_contracts/2020-03-01-metamask101.md
@@ -6,10 +6,10 @@ image:  contracts/images/B0222246A4A189E69020B821F2C3F4A2.jpg
 categories: [ Jekyll, tutorial ]
 tags: 
 order_number: 2
-description: Bucharest’s  its consolidation as the national capital of Romania late in the 19th century. First mentioned as the “Citadel of București” in 1459, it became the residence of the famous Wallachian prince Vlad III the Impaler. # Add post description (optional)
+description: MetaMask钱包 自称是“以太坊用的安全的身份金库”（ a secure identity vault for Ethereum）
 ---
 
-使用以太坊，一个常用的工具是 MetaMask 钱包，我们可以在 Chrome 等浏览器中使用<sup>*</sup>，用它来进行各种试验。MetaMask 自称是“以太坊用的安全的身份金库”（ a secure identity vault for Ethereum.）
+使用以太坊，一个常用的工具是 MetaMask 钱包，我们可以在 Chrome 等浏览器中使用<sup>*</sup>，用它来进行各种试验。MetaMask 自称是“以太坊用的安全的身份金库”（ a secure identity vault for Ethereum）。
 
 这里，我们来介绍逐步介绍 MetaMask 的使用。MetaMask 也是开发以太坊及应用时最常用的工具，我们用它与区块链本地测试网络、自己编写的智能合约交互。可参考：https://www.trufflesuite.com/docs/truffle/getting-started/truffle-with-metamask
 
