--- a/_contracts/2020-03-01-metamask101.md
+++ b/_contracts/2020-03-01-metamask101.md
@@ -3,7 +3,7 @@ layout: post
 title:  "MataMask使用指南 (MataMask 101)"
 author: jane
 image:  contracts/images/B0222246A4A189E69020B821F2C3F4A2.jpg
-categories: [ Jekyll, tutorial ]
+categories: [ tutorial ]
 tags: 
 order_number: 2
 description: MetaMask钱包 自称是“以太坊用的安全的身份金库”（ a secure identity vault for Ethereum）
