--- a/_contracts/2020-03-01-metamask101.md
+++ b/_contracts/2020-03-01-metamask101.md
@@ -40,11 +40,11 @@ MetaMask可在 Chrome Firefox Opera Brave 等浏览器中使用，现在也有 i
 
 首次使用 MetaMask ，我们要注册一个它的账户，或导入一个账号。注意，这里指的是“MetaMask账号”，而不是区块链账号（地址与私钥）。我们将在下一步用 MetaMask 注册**以太坊账号**。
 
-![IMAGE](/contracts/images/C3DF71C86647634E644710BBBE18EE00.jpg =1920x1080)
+![IMAGE](/contracts/images/C3DF71C86647634E644710BBBE18EE00.jpg)
 
 注册之后，我们将有一个密码。除了密码之外，我们还可以把**助记词（“种子密语”）**备份起来，以供恢复。
 
-![IMAGE](/contracts/images/C50204CB47DEBD022764D10F4A025ED8.jpg =1920x1080)
+![IMAGE](/contracts/images/C50204CB47DEBD022764D10F4A025ED8.jpg)
 
 你要进行一个必备的操作：**备份密语**。
 
@@ -54,7 +54,7 @@ MetaMask可在 Chrome Firefox Opera Brave 等浏览器中使用，现在也有 i
 
 - 在这里，你会被要求明确地输入一次密语，以完成注册操作操作。请按指引完成操作。
 
-![IMAGE](/contracts/images/C196781088726CB05F3B9037AFAA357D.jpg =1920x1080)
+![IMAGE](/contracts/images/C196781088726CB05F3B9037AFAA357D.jpg)
 
 MetaMask特别提示：“MetaMask 无法恢复您的种子密语。”如果时间长了未登陆，你重新登陆时，可能会要求输入密码或使用种子密语进行恢复，见附录部分。
 
@@ -75,9 +75,9 @@ MetaMask特别提示：“MetaMask 无法恢复您的种子密语。”如果时
 
 我们可用浏览器插件查看账号信息：
 
-![IMAGE](/contracts/images/E1C49C5FABA41B803ACB20ACE0CDA856.jpg =1920x1080)
+![IMAGE](/contracts/images/E1C49C5FABA41B803ACB20ACE0CDA856.jpg)
 
-![IMAGE](/contracts/images/A7969C9D33C3C92D1A4DA7E55862D212.jpg =1920x1080)
+![IMAGE](/contracts/images/A7969C9D33C3C92D1A4DA7E55862D212.jpg)
 
 这个测试账号的地址是：`0xDa4A889e7054F0D71ceE516fE64D488217D8ddeE`
 
@@ -87,7 +87,7 @@ MetaMask特别提示：“MetaMask 无法恢复您的种子密语。”如果时
 
 我们可以在以太坊浏览器 Etherscan 看到这个账号的信息：
 
-![IMAGE](/contracts/images/4B1EC8EFF6BF97B71AF0045F3260A48F.jpg =1920x1080)
+![IMAGE](/contracts/images/4B1EC8EFF6BF97B71AF0045F3260A48F.jpg)
 
 https://ropsten.etherscan.io/address/0xda4a889e7054f0d71cee516fe64d488217d8ddee
 
@@ -95,7 +95,7 @@ https://ropsten.etherscan.io/address/0xda4a889e7054f0d71cee516fe64d488217d8ddee
 
 我们可以导出私钥。请注意其中的提示，这是对区块链中的私钥的标准提示：**“注意：永远不要公开这个私钥。任何拥有你的私钥的人都可以窃取你帐户中的任何资产。”**
 
-![IMAGE](/contracts/images/DA01E0040FF9F11954B4320F44C20006.jpg =1920x1080)
+![IMAGE](/contracts/images/DA01E0040FF9F11954B4320F44C20006.jpg)
 
 ---
 ## 技术性内容：私钥，公钥，地址
@@ -116,9 +116,9 @@ https://ropsten.etherscan.io/address/0xda4a889e7054f0d71cee516fe64d488217d8ddee
 
 点“**创建账户**”，按指引，我们完成注册。
 
-![IMAGE](/contracts/images/8853EF5964FB536788E356847B6181E1.jpg =1920x1080)
+![IMAGE](/contracts/images/8853EF5964FB536788E356847B6181E1.jpg)
 
-![IMAGE](/contracts/images/4EDC8DCFCA7E8CEB0481FB312381E5D6.jpg =1920x1080)
+![IMAGE](/contracts/images/4EDC8DCFCA7E8CEB0481FB312381E5D6.jpg)
 
 得到一个新的以太坊账号，它同样包括一对：
 
@@ -127,7 +127,7 @@ https://ropsten.etherscan.io/address/0xda4a889e7054f0d71cee516fe64d488217d8ddee
  
 到这里，我们有两个测试账号（“Account 1”，“账号 2”）：
 
-![IMAGE](/contracts/images/A08093583F1F46AC14655B462FD06B3A.jpg =1920x1080)
+![IMAGE](/contracts/images/A08093583F1F46AC14655B462FD06B3A.jpg)
 
 两个账号相关的信息（注：这里仅为示例，千万不可向其他人透露私钥！！！）
 
@@ -149,12 +149,12 @@ https://ropsten.etherscan.io/address/0xda4a889e7054f0d71cee516fe64d488217d8ddee
 
 为了进行转账试验，我们去 Rospten 测试网络的水龙头（https://faucet.ropsten.be/ ），免费获得仅在测试网有效的以太币。（这不是主网以太币，仅是测试币。）
 
-![IMAGE](/contracts/images/83BDDA31ED6CC7D95AF1765549D74691.jpg =1920x1080)
+![IMAGE](/contracts/images/83BDDA31ED6CC7D95AF1765549D74691.jpg)
 https://faucet.ropsten.be/
 
 输入地址，我们获得了1.5个测试以太币。在区块浏览器可以看到交易信息：
 
-![IMAGE](/contracts/images/B97014377499551874BF6837D138F834.jpg =1920x1080)
+![IMAGE](/contracts/images/B97014377499551874BF6837D138F834.jpg)
 
 https://ropsten.etherscan.io/tx/0xe193559177b0c8f51f5439ec3456fc419ed0769cc809674990a0487c94f989d7
 
@@ -169,9 +169,9 @@ https://ropsten.etherscan.io/tx/0xe193559177b0c8f51f5439ec3456fc419ed0769cc80967
 - 有一个交易发生了；
 - 该交易花费了0.000042 ETH的Gas Fee。
 
-![IMAGE](/contracts/images/0A6796D43BF85554475E29AC7943757D.jpg =1920x1080)
+![IMAGE](/contracts/images/0A6796D43BF85554475E29AC7943757D.jpg)
 
-![IMAGE](/contracts/images/3E42FD81A48907496696A3A40EE29241.jpg =1920x1080)
+![IMAGE](/contracts/images/3E42FD81A48907496696A3A40EE29241.jpg)
 
 你也可用区块浏览器查看该交易的信息：
 
@@ -179,7 +179,7 @@ https://ropsten.etherscan.io/tx/0x155104f6afdd664397c6432431d6e4109fbcbb22b0ee9b
 
 我们再做第二次转账试验，从第一个账号向第二张账号转账「1个测试以太币」：
 
-![IMAGE](/contracts/images/B2914EFCE5A220D0F683E2EF72EABC71.jpg =1920x1080)
+![IMAGE](/contracts/images/B2914EFCE5A220D0F683E2EF72EABC71.jpg)
 
 快知区块链教程 - 编程指南系列 - MetaMask 使用指南（MetaMask 101），2020年3月1日，V0.1.0
 
@@ -191,23 +191,23 @@ https://ropsten.etherscan.io/tx/0x155104f6afdd664397c6432431d6e4109fbcbb22b0ee9b
 
 - 输入密码
 
-![IMAGE](/contracts/images/B0222246A4A189E69020B821F2C3F4A2.jpg =1920x1080)
+![IMAGE](/contracts/images/B0222246A4A189E69020B821F2C3F4A2.jpg)
 
 - 使用助记词（“种子密语”）恢复。此时要重设密码。
 
-![IMAGE](/contracts/images/1235C2D1DFBAC465211E91CD8B6E7C19.jpg =1920x1080)
+![IMAGE](/contracts/images/1235C2D1DFBAC465211E91CD8B6E7C19.jpg)
 
 ## 附录2： MetaMask的所用的Ropsten 以太坊测试网络信息
 
-![IMAGE](/contracts/images/97F77F3E6CA7C4DF76B412F7A4195FE8.jpg =1920x1080)
+![IMAGE](/contracts/images/97F77F3E6CA7C4DF76B412F7A4195FE8.jpg)
 
 ## 附录3：导入以太坊账号、链接硬件钱包
 
 我们也可以往 MetaMask 中导入其他的以太坊账号、链接硬件钱包。
 
-![IMAGE](/contracts/images/E7290613C875693B4978430453040F6E.jpg =1920x1080)
+![IMAGE](/contracts/images/E7290613C875693B4978430453040F6E.jpg)
 
-![IMAGE](/contracts/images/C2520860C2675B8D85706BCC1899DA16.jpg =1920x1080)
+![IMAGE](/contracts/images/C2520860C2675B8D85706BCC1899DA16.jpg)
 
 ## 备注：关于MetaMask的原来的对消息签名的功能
 
