--- a/_contracts/2020-03-01-metamask101.md
+++ b/_contracts/2020-03-01-metamask101.md
@@ -89,7 +89,7 @@ MetaMask特别提示：“MetaMask 无法恢复您的种子密语。”如果时
 
 ![IMAGE](/contracts/images/4B1EC8EFF6BF97B71AF0045F3260A48F.jpg)
 
-https://ropsten.etherscan.io/address/0xda4a889e7054f0d71cee516fe64d488217d8ddee
+[https://ropsten.etherscan.io/address/0xda4a889e7054f0d71cee516fe64d488217d8ddee](https://ropsten.etherscan.io/address/0xda4a889e7054f0d71cee516fe64d488217d8ddee)
 
 ### 2.2 导出私钥
 
@@ -156,7 +156,7 @@ https://faucet.ropsten.be/
 
 ![IMAGE](/contracts/images/B97014377499551874BF6837D138F834.jpg)
 
-https://ropsten.etherscan.io/tx/0xe193559177b0c8f51f5439ec3456fc419ed0769cc809674990a0487c94f989d7
+[https://ropsten.etherscan.io/tx/0xe193559177b0c8f51f5439ec3456fc419ed0769cc809674990a0487c94f989d7](https://ropsten.etherscan.io/tx/0xe193559177b0c8f51f5439ec3456fc419ed0769cc809674990a0487c94f989d7)
 
 在我们的MetaMask钱包中，可以看到获得的测试网以太币。
 
@@ -197,7 +197,7 @@ https://ropsten.etherscan.io/tx/0x155104f6afdd664397c6432431d6e4109fbcbb22b0ee9b
 
 ![IMAGE](/contracts/images/1235C2D1DFBAC465211E91CD8B6E7C19.jpg)
 
-## 附录2： MetaMask的所用的Ropsten 以太坊测试网络信息
+## 附录2： 所用的Ropsten 以太坊测试网络信息
 
 ![IMAGE](/contracts/images/97F77F3E6CA7C4DF76B412F7A4195FE8.jpg)
 
@@ -209,14 +209,14 @@ https://ropsten.etherscan.io/tx/0x155104f6afdd664397c6432431d6e4109fbcbb22b0ee9b
 
 ![IMAGE](/contracts/images/C2520860C2675B8D85706BCC1899DA16.jpg)
 
-## 备注：关于MetaMask的原来的对消息签名的功能
+## 备注：关于MetaMask原有的对消息签名的功能
 
 MetaMask已经不再提供对信息签名的功能，相关的讨论见如下链接：
 
-https://metamask.zendesk.com/hc/en-us/articles/360015488751-Signature-Request-Warnings-eth-sign
+[https://metamask.zendesk.com/hc/en-us/articles/360015488751-Signature-Request-Warnings-eth-sign](https://metamask.zendesk.com/hc/en-us/articles/360015488751-Signature-Request-Warnings-eth-sign)
 
 In these cases, the balance of your wallet is at stake: it's possible for a malicious actor to encode a real transaction involving Eth or tokens inside the data, ask for your signature, and submit the transaction to the blockchain as if you had signed the transaction yourself. 
 
-https://medium.com/metamask/scaling-web3-with-signtypeddata-91d6efc8b290
+[https://medium.com/metamask/scaling-web3-with-signtypeddata-91d6efc8b290](https://medium.com/metamask/scaling-web3-with-signtypeddata-91d6efc8b290)
 
-https://medium.com/metamask/eip712-is-coming-what-to-expect-and-how-to-use-it-bb92fd1a7a26
+[https://medium.com/metamask/eip712-is-coming-what-to-expect-and-how-to-use-it-bb92fd1a7a26](https://medium.com/metamask/eip712-is-coming-what-to-expect-and-how-to-use-it-bb92fd1a7a26)
