--- a/_contracts/2020-03-01-metamask101.md
+++ b/_contracts/2020-03-01-metamask101.md
@@ -185,7 +185,7 @@ MetaMask特别提示：“MetaMask 无法恢复您的种子密语。”如果时
 
 ---
 
-## 附录1：重新登录的两种方式
+### 附录1：重新登录的两种方式
 
 我们可以用两种方式重新登录：
 
@@ -197,11 +197,11 @@ MetaMask特别提示：“MetaMask 无法恢复您的种子密语。”如果时
 
 ![IMAGE](/contracts/images/1235C2D1DFBAC465211E91CD8B6E7C19.jpg)
 
-## 附录2： 所用的Ropsten 以太坊测试网络信息
+### 附录2： 所用的Ropsten 以太坊测试网络信息
 
 ![IMAGE](/contracts/images/97F77F3E6CA7C4DF76B412F7A4195FE8.jpg)
 
-## 附录3：导入以太坊账号、链接硬件钱包
+### 附录3：导入以太坊账号、链接硬件钱包
 
 我们也可以往 MetaMask 中导入其他的以太坊账号、链接硬件钱包。
 
@@ -209,7 +209,7 @@ MetaMask特别提示：“MetaMask 无法恢复您的种子密语。”如果时
 
 ![IMAGE](/contracts/images/C2520860C2675B8D85706BCC1899DA16.jpg)
 
-## 备注：关于MetaMask原有的对消息签名的功能
+### 备注：关于MetaMask原有的对消息签名的功能
 
 MetaMask已经不再提供对信息签名的功能，相关的讨论见如下链接：
 
