--- a/_contracts/2020-03-01-metamask101.md
+++ b/_contracts/2020-03-01-metamask101.md
@@ -98,7 +98,7 @@ MetaMask特别提示：“MetaMask 无法恢复您的种子密语。”如果时
 ![IMAGE](/contracts/images/DA01E0040FF9F11954B4320F44C20006.jpg)
 
 ---
-## 技术性内容：私钥，公钥，地址
+### ▍技术性内容：私钥，公钥，地址
 
 每一个以太坊账号，都有一个地址和一个私钥。对于开发者来说，还有一个公钥，由私钥可以计算得到公钥，由公钥进行哈希计算得到地址。
 
