--- a/_contracts/2020-03-01-metamask101.md
+++ b/_contracts/2020-03-01-metamask101.md
@@ -181,7 +181,11 @@ MetaMask特别提示：“MetaMask 无法恢复您的种子密语。”如果时
 
 ![IMAGE](/contracts/images/B2914EFCE5A220D0F683E2EF72EABC71.jpg)
 
-快知区块链教程 - 编程指南系列 - MetaMask 使用指南（MetaMask 101），2020年3月1日，V0.1.0
+---
+
+快知区块链教程 - 编程指南系列 
+
+**MetaMask 使用指南（MetaMask 101）**，2020年3月1日，V0.1.0
 
 ---
 
