--- a/_contracts/2020-03-03-truffle101.md
+++ b/_contracts/2020-03-03-truffle101.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Truffle 编程框架入门指南 (Truffle 101)"
 author: jane
-image:  contracts/images/B0222246A4A189E69020B821F2C3F4A2.jpg
+image:  contracts/images/22E2FA88200ABD3FF9E90CA35A0A803E.jpg
 categories: [ tutorial ]
 tags: 
 description: Truffle 工具套件是常用的区块链智能合约编程框架，它由包括web3.js的一系列的Node.js包组成。
@@ -14,7 +14,7 @@ Truffle 工具套件是常用的区块链智能合约编程框架，它由包括
 - 用它的控制台与链上智能合约交互
 - 它集成了单元测试组建
 
-![IMAGE](/contracts/images/22E2FA88200ABD3FF9E90CA35A0A803E.jpg =1024x768)
+![IMAGE](/contracts/images/22E2FA88200ABD3FF9E90CA35A0A803E.jpg)
 
 通常，它与如下工具联合使用：
 
@@ -24,7 +24,7 @@ Truffle 工具套件是常用的区块链智能合约编程框架，它由包括
 - Solidity （智能合约编程语言，版本v0.5.16）
 - OpenZeppelin 智能合约模板
 
-![IMAGE](/contracts/images/B1861359CE18FE9065F316601D24C1A2.jpg =1024x768)
+![IMAGE](/contracts/images/B1861359CE18FE9065F316601D24C1A2.jpg)
 
 相关网址：
 
@@ -318,7 +318,7 @@ web3.eth.getBalance(accounts[1]);
 
 以上用Truffle编写一个智能合约项目，包括如下 4 个步骤：
 
-![IMAGE](/contracts/images/D1F109FF7CF28C836DC9D5730A61AB0F.jpg =1024x768)
+![IMAGE](/contracts/images/D1F109FF7CF28C836DC9D5730A61AB0F.jpg)
 
 node.js 项目通常就是为DAPP的用户交互部分。如果我们只是编写智能合约，及对它进行测试，也可以暂时不编写这个部分。
 
