--- a/_contracts/2020-03-01-metamask101.md
+++ b/_contracts/2020-03-01-metamask101.md
@@ -181,8 +181,7 @@ MetaMask特别提示：“MetaMask 无法恢复您的种子密语。”如果时
 ![IMAGE](/contracts/images/B2914EFCE5A220D0F683E2EF72EABC71.jpg)
 
 ---
-
-「文章信息」
+![技术指南文档](/contracts/images/techdoc.png)
 
 快知区块链教程 - 编程指南系列 
 
