--- a/_contracts/2020-03-03-truffle101.md
+++ b/_contracts/2020-03-03-truffle101.md
@@ -225,7 +225,9 @@ contract Faucet {
 }
 ```
 
-### 3.4 增加部署脚本，以把我们新创建的 Faucet.sol 合约部署到区块链上
+### 3.4 增加部署脚本
+
+我们通过部署脚本把我们新创建的 Faucet.sol 合约部署到区块链上去。所谓的部署，就是Migrate。
 
 在Migrations 目录中，现在只有一个文件：`1_initial_migration.js`。我们来编写第二个migration文件：`2_deploy_contracts.js`。
 
