--- a/_contracts/2020-03-03-truffle101.md
+++ b/_contracts/2020-03-03-truffle101.md
@@ -24,7 +24,7 @@ Truffle 工具套件是常用的区块链智能合约编程框架，它由包括
 - Solidity （智能合约编程语言，版本v0.5.16）
 - OpenZeppelin 智能合约模板
 
-![IMAGE](/contracts/images/B1861359CE18FE9065F316601D24C1A2.jpg)
+![IMAGE](/contracts/images/B1861359CE18FE9065F316601D24C1A2.png)
 
 相关网址：
 
@@ -323,7 +323,7 @@ web3.eth.getBalance(accounts[1]);
 
 以上用Truffle编写一个智能合约项目，包括如下 4 个步骤：
 
-![IMAGE](/contracts/images/D1F109FF7CF28C836DC9D5730A61AB0F.jpg)
+![IMAGE](/contracts/images/D1F109FF7CF28C836DC9D5730A61AB0F.png)
 
 node.js 项目通常就是为DAPP的用户交互部分。如果我们只是编写智能合约，及对它进行测试，也可以暂时不编写这个部分。
 
