--- a/_contracts/2020-03-03-truffle101.md
+++ b/_contracts/2020-03-03-truffle101.md
@@ -276,7 +276,9 @@ truffle migrate --reset
 到这里，Faucet水龙头智能合约就部署在测试链上了。
 
 接下来，我们用Truffle Console控制台与链上的智能合约进行一些交互，了解它是如何工作的。
-
+```
+truffle console
+```
 ### 4.1 简单的交互
 
 ```
