--- a/_contracts/2020-03-03-truffle101.md
+++ b/_contracts/2020-03-03-truffle101.md
@@ -176,6 +176,22 @@ web3.eth.getBalance(accounts[0]);
 | 1 |请注意，不要将Ganache测试网络的**地址/私钥**与公共区块链混用。如果你向一个公共区块链网络上的地址转账，可能造成你以太币的永久丢失，造成金钱损失。|
 | 2 |请注意，每次重启Ganache之后均开启一个全新的测试网络：1）十个账号与私钥不变（运行时加`-d`）；2）每次重启测试区块链，智能合约要重新部署，方可再次使用。|
 
+你可以在文件夹建立一个“test.js”文件，用来查询和转账。test.js见附录。
+
+```
+node test.js
+
+//第一次运行：
+account[0], account[1]: 100000000000000000000 100000000000000000000
+send 1 ether from account[0] to account[1]:
+account[0], account[1]: 98999580000000000000 101000000000000000000
+
+//第二次运行：
+account[0], account[1]: 98999580000000000000 101000000000000000000
+send 1 ether from account[0] to account[1]:
+account[0], account[1]: 97999160000000000000 102000000000000000000
+```
+
 ## 3. 智能合约：编译与部署
 
 现在我们只有一个空项目，但这里先进行一下编译与部署。
@@ -369,3 +385,37 @@ sudo n stable
 ```
 
 更新后版本号为：`v12.16.1`
+
+## 附录：test.js
+
+```
+// test.js
+// Prerequisite Web3.js installed
+const Web3 = require('web3');
+const web3 = new Web3('http://127.0.0.1:8545');
+
+const main = async function() {
+    let accounts = await web3.eth.getAccounts()
+
+    b0 = await web3.eth.getBalance(accounts[0]);
+    b1 = await web3.eth.getBalance(accounts[1]);
+    console.log("account[0], account[1]:",b0,b1);
+
+    console.log("send 1 ether from account[0] to account[1]:");
+    await web3.eth.sendTransaction({
+        from:accounts[0],
+        to:accounts[1],
+        value:'1000000000000000000',
+        gasLimit: web3.utils.toHex(300000),
+        gasPrice: web3.utils.toHex(20000000000)
+    });
+
+    b0 = await web3.eth.getBalance(accounts[0]);
+    b1 = await web3.eth.getBalance(accounts[1]);
+    console.log("account[0], account[1]:",b0,b1);
+}
+
+main().catch((err) => {
+    console.error(err);
+});
+```
