--- a/_contracts/2020-03-03-truffle101.md
+++ b/_contracts/2020-03-03-truffle101.md
@@ -176,7 +176,7 @@ web3.eth.getBalance(accounts[0]);
 | 1 |请注意，不要将Ganache测试网络的**地址/私钥**与公共区块链混用。如果你向一个公共区块链网络上的地址转账，可能造成你以太币的永久丢失，造成金钱损失。|
 | 2 |请注意，每次重启Ganache之后均开启一个全新的测试网络：1）十个账号与私钥不变（运行时加`-d`）；2）每次重启测试区块链，智能合约要重新部署，方可再次使用。|
 
-你可以在文件夹建立一个“test.js”文件，用来查询和转账。test.js见附录。
+你可以在文件夹建立一个“test.js”文件，用来查询和转账。test.js见附录。你可以看到每次转账均需要付出一定的Gas。
 
 ```
 node test.js
