--- a/_contracts/2020-03-03-truffle101.md
+++ b/_contracts/2020-03-03-truffle101.md
@@ -206,7 +206,7 @@ Migration ，指的是把智能合约部署到区块链上去。
 truffle migrate
 ```
 
-关于 Migrate 的详尽介绍可参考[此文](https://www.sitepoint.com/truffle-migrations-explained/)，及[文章2](https://www.sitepoint.com/truffle-migrations-explained/)。
+关于 Migrate 的详尽介绍可参考[文1](https://www.sitepoint.com/truffle-migrations-explained/)，及[文2](https://www.sitepoint.com/truffle-migrations-explained/)。
 
 ### 3.3 创建一个智能合约
 
