--- a/_contracts/2020-03-03-truffle101.md
+++ b/_contracts/2020-03-03-truffle101.md
@@ -16,7 +16,7 @@ Truffle 工具套件是常用的区块链智能合约编程框架，它由包括
 
 - 进行智能合约的编译、链上部署
 - 用它的控制台与链上智能合约交互
-- 它集成了单元测试组建
+- 它集成了单元测试组件
 
 ![IMAGE](/contracts/images/22E2FA88200ABD3FF9E90CA35A0A803E.jpg)
 
