--- a/_contracts/2020-03-03-truffle101.md
+++ b/_contracts/2020-03-03-truffle101.md
@@ -338,6 +338,35 @@ web3.eth.getBalance(instance.address)
 web3.eth.getBalance(accounts[1]);
 ```
 
+### 4.4 用js与之交互
+
+用js与之交互时，我们需要预先安装web3.js:
+
+```
+npm install web3
+```
+
+在水龙头Faucet中，我们预先诸如了 4 ether。
+
+我们创建一个js代码，代码见附录（其中的钱包地址、合约地址要做相应的调整，均为Ganache本地测试网地址）：
+```
+touch runtap.js
+vim runtap.js
+```
+运行可得到如下结果：
+```
+node runtap.js
+
+Balance of Faucet: 4
+Balance of MyWalletAddress: 101.39150032
+Tap the Faucet for 0.1 ether...
+After Faucet Tapping,show the balance...
+New Balance of Faucet: 3.9
+New Balance of MyWalletAddress: 101.49089319999999
+```
+
+特别注意的是，你会看到，你按水龙头时，你的钱包需要还有少量的 ether 用以支付燃料费（gas）。
+
 ## 小结
 
 以上用Truffle编写一个智能合约项目，包括如下 4 个步骤：
@@ -425,5 +454,58 @@ const main = async function() {
 
 main().catch((err) => {
     console.error(err);
+});
+```
+
+## 附录：runtap.js
+
+```
+const Web3 = require('web3');
+const web3 = new Web3('http://127.0.0.1:8545');
+
+//为Ganache 的account[1]
+const privateKey = '6cbed15c793ce57650b9877cf6fa156fbef513c4e6134f022a85b1ffdd59b2a1';
+
+// Add your Ethereum wallet to the Web3 object
+web3.eth.accounts.wallet.add('0x' + privateKey);
+const myWalletAddress = web3.eth.accounts.wallet[0].address;
+
+//为智能合约部署地址
+const myContractAddress = '0xCfEB869F69431e42cdB54A4F4f105C19C080A601';
+
+const fs = require('fs');
+const contract = JSON.parse(fs.readFileSync('./build/contracts/Faucet.json', 'utf8'));
+const myAbi = contract.abi;
+
+const faucet = new web3.eth.Contract(myAbi, myContractAddress);
+// console.log(faucet.methods);
+
+const main = async function() {
+    faucetBalance = await web3.eth.getBalance(faucet._address);
+    console.log("Balance of Faucet:",faucetBalance / 1e18);
+
+    accountBalance = await web3.eth.getBalance(myWalletAddress);
+    console.log("Balance of MyWalletAddress:",accountBalance / 1e18);
+
+    console.log("Tap the Faucet for 0.1 ether...");
+    result = await faucet.methods.withdraw('100000000000000000').send({
+      from:myWalletAddress,
+      gasLimit: web3.utils.toHex(300000),
+      gasPrice: web3.utils.toHex(20000000000)
+      })
+    .once('receipt', (receipt) => {
+         // console.log(receipt);
+    });
+
+    console.log("After Faucet Tapping,show the balance...")
+    faucetBalance = await web3.eth.getBalance(faucet._address);
+    console.log("New Balance of Faucet:",faucetBalance / 1e18);
+
+    accountBalance = await web3.eth.getBalance(myWalletAddress);
+    console.log("New Balance of MyWalletAddress:",accountBalance / 1e18);
+}
+
+main().catch((err) => {
+  console.error(err);
 });
 ```
