--- a/_contracts/2020-03-03-truffle101.md
+++ b/_contracts/2020-03-03-truffle101.md
@@ -346,7 +346,7 @@ web3.eth.getBalance(accounts[1]);
 npm install web3
 ```
 
-在水龙头Faucet中，我们预先诸如了 4 ether。
+在水龙头Faucet中，我们预先充值了 4 ether，具体做法可参考4.2。
 
 我们创建一个js代码，代码见附录（其中的钱包地址、合约地址要做相应的调整，均为Ganache本地测试网地址）：
 ```
