--- a/_contracts/2020-03-03-truffle101.md
+++ b/_contracts/2020-03-03-truffle101.md
@@ -492,18 +492,15 @@ const main = async function() {
       from:myWalletAddress,
       gasLimit: web3.utils.toHex(300000),
       gasPrice: web3.utils.toHex(20000000000)
-      })
-    .once('receipt', (receipt) => {
-         // console.log(receipt);
-    });
+      });
 
-    console.log("After Faucet Tapping,show the balance...")
+    console.log("After Faucet Tapping,show the balance...");
     faucetBalance = await web3.eth.getBalance(faucet._address);
     console.log("New Balance of Faucet:",faucetBalance / 1e18);
 
     accountBalance = await web3.eth.getBalance(myWalletAddress);
     console.log("New Balance of MyWalletAddress:",accountBalance / 1e18);
-}
+};
 
 main().catch((err) => {
   console.error(err);
