--- a/_contracts/2020-03-03-truffle101.md
+++ b/_contracts/2020-03-03-truffle101.md
@@ -181,7 +181,7 @@ web3.eth.getBalance(accounts[0]);
 | 2 |请注意，每次重启Ganache之后均开启一个全新的测试网络：1）十个账号与私钥不变（运行时加`-d`）；2）每次重启测试区块链，智能合约要重新部署，方可再次使用。|
 
 
-你可以在文件夹建立一个“test.js”文件，用来查询和转账。test.js见附录。你可以看到每次转账均需要付出一定的Gas。
+你可以在文件夹建立一个“getbalance.js”文件，用来查询和转账。getbalance.js见附录。你可以看到每次转账均需要付出一定的Gas。
 
 ```
 node test.js
@@ -244,7 +244,11 @@ contract Faucet {
 }
 ```
 
-### 3.4 增加部署脚本
+### 3.4 编写单元测试
+
+特别提醒的是，智能合约程序由于是处理数字资产的，需要非常严谨，正常的实践均应该在编写智能合约时同时编写单元测试。严格来说，应该是“先编写单元测试，后编写代码”，确保智能合约的运行恰如预期。为了让这一指南简化一些，我们忽略了单元测试的部分。
+
+### 3.5 增加部署脚本
 
 我们通过部署脚本把我们新创建的 Faucet.sol 合约部署到区块链上去。所谓的部署，就是Migrate。
 
@@ -268,7 +272,7 @@ module.exports = function(deployer) {
 
 在部署文件中，我们可以给出智能合约的相关参数。
 
-### 3.5 再次编译与部署
+### 3.6 再次编译与部署
 
 ```
 truffle compile
@@ -423,10 +427,10 @@ Solidity v0.5.16 (solc-js)
 Node v12.18.1
 Web3.js v1.2.1
 ```
-## 附录：test.js
+## 附录：getbalance.js
 
 ```js
-// test.js
+// getbalance.js
 // Prerequisite Web3.js installed
 const Web3 = require('web3');
 const web3 = new Web3('http://127.0.0.1:8545');
