--- a/_contracts/2020-03-03-truffle101.md
+++ b/_contracts/2020-03-03-truffle101.md
@@ -81,7 +81,7 @@ truffle init
 
 我们也可以用 `truffle unbox`来下载已有的其他项目模板。这里可以看到已有的项目模板一览：[https://www.trufflesuite.com/boxes](https://www.trufflesuite.com/boxes)
 
-我们接下来将用到的三个 Truffle 功能是编译（Compile）,部署（migrate），测试（test）将在其它指南中介绍：
+我们接下来将用到的三个 Truffle 功能是编译（Compile）,部署（migrate），单元测试（test）将在其它指南中介绍：
 ```
 Commands:
 
