--- a/_contracts/2020-06-23-remix101.md
+++ b/_contracts/2020-06-23-remix101.md
@@ -10,7 +10,7 @@ description: Remix 是最常用的以太坊智能合约编程编辑器。
 
 Remix 是最常用的以太坊智能合约编程编辑器(IDE)。
 
-文档信息：快知区块链教程 - 编程指南系列 - **Remix 简要使用指南 (Remix 101) **，2020年6月23日，V0.1.0
+文档信息：快知区块链教程 - 编程指南系列 - Remix 简要使用指南 (Remix 101) ，2020年6月23日，V0.1.0
 
 界面：https://remix.ethereum.org/
 文档：https://remix-ide.readthedocs.io/
