--- a/_contracts/2020-06-23-remix101.md
+++ b/_contracts/2020-06-23-remix101.md
@@ -26,7 +26,7 @@ Remix 是最常用的以太坊智能合约编程编辑器(IDE)。
 
 - Ganache 本地测试网
 
-# 1 编写与部署智能合约
+## 1 编写与部署智能合约
 
 在《精通以太坊》中，AA给出了一个以太币水龙头（Faucet）简单程序，通过它可以获取以太币。它的功能是：
 
@@ -34,7 +34,7 @@ Remix 是最常用的以太坊智能合约编程编辑器(IDE)。
 
 接下来，我们用 Remix 来编写和部署它。
 
-## 1.1 编写智能合约
+### 1.1 编写智能合约
 
 代码如下（为精通以太坊中的Faucet智能合约程序的第一个版本，各个版本见：https://github.com/ethereumbook/ethereumbook/tree/develop/code/Solidity）：
 
@@ -61,7 +61,7 @@ contract Faucet {
 }
 ```
 
-## 1.2 编译与部署
+### 1.2 编译与部署
 
 我们将以上代码拷贝到 Remix 中，进行编译。
 
@@ -86,9 +86,9 @@ contract Faucet {
 ![IMAGE](/contracts/images/A10DD5E0B1A786A58F12B35B5C67D8F3.jpg )
 图：在区块浏览器中看到的智能合约信息
 
-# 2 与智能合约交互
+## 2 与智能合约交互
 
-## 2.1 运行前的准备，存入以太币
+### 2.1 运行前的准备，存入以太币
 
 接下来，我们就可以与水龙头智能合约进行交互。
 
@@ -101,11 +101,11 @@ contract Faucet {
 ![IMAGE](/contracts/images/35CA986F423408A441ACD371E1821FC4.jpg )
 图：向智能合约转入1 ether
 
-## 2.2 查询余额
+### 2.2 查询余额
 
 转入后，我们可以在区块浏览器中查询其余额。
 
-## 2.1 在 Remix 中调用 withdraw
+### 2.1 在 Remix 中调用 withdraw
 
 ![IMAGE](/contracts/images/5D872A80F77D2A171696CAB87C97BAAB.jpg )
 图：在withdraw中输入100000000000000000（即0.1 ether）
@@ -120,7 +120,7 @@ contract Faucet {
 ![IMAGE](/contracts/images/C95D6493C8A3E35803A1934D85BCBFB5.jpg )
 图：调用后发生的内部交易（internal transaction）
 
-# 3 与Ganache 本地测试网进行交互
+## 3 与Ganache 本地测试网进行交互
 
 Ganache 本地测试网有两种运行方式：
 
@@ -131,7 +131,7 @@ Ganache 本地测试网有两种运行方式：
 
 可以在如下网站下载与安装：https://www.trufflesuite.com/ganache
 
-## 3.1 启动Ganache，重启Metamask、Remix
+### 3.1 启动Ganache，重启Metamask、Remix
 
 ![IMAGE](/contracts/images/D48156388E700DE69718681E7474A174.jpg )
 图：Ganache本地网络，运行于localhost:8545
@@ -146,7 +146,7 @@ Ganache 本地测试网有两种运行方式：
 
 智能合约地址为：0x1af9ED785ade5b59D42e82a830AeeBB658e8972e
 
-## 3.2 与Faucet交互
+### 3.2 与Faucet交互
 
 - 向智能合约地址充值1 ether
 - 调用withdraw
@@ -154,7 +154,7 @@ Ganache 本地测试网有两种运行方式：
 ![IMAGE](/contracts/images/AF3B931157388B32E7A2B7E0C2F4EDAD.jpg )
 图：两次调用的情况
 
-# 下一步练习
+## 下一步练习
 
 你已经通过Ropsten测试网和本地测试网（Ganache）了解了编写、部署智能合约，并与之交互。
 
