--- a/_contracts/2020-06-23-remix101.md
+++ b/_contracts/2020-06-23-remix101.md
@@ -134,7 +134,7 @@ Ganache 本地测试网有两种运行方式：
 ### 3.1 启动Ganache，重启Metamask、Remix
 
 ![IMAGE](/contracts/images/D48156388E700DE69718681E7474A174.jpg )
-图：Ganache本地网络，运行于localhost:8545
+图：Ganache本地网络，运行于127.0.0.1:78545
 
 启动Ganache。
 
@@ -149,7 +149,7 @@ Ganache 本地测试网有两种运行方式：
 ### 3.2 与Faucet交互
 
 - 向智能合约地址充值1 ether
-- 调用withdraw
+- 调用withdraw()
 
 ![IMAGE](/contracts/images/AF3B931157388B32E7A2B7E0C2F4EDAD.jpg )
 图：两次调用的情况
