--- a/_contracts/2020-06-23-remix101.md
+++ b/_contracts/2020-06-23-remix101.md
@@ -28,7 +28,7 @@ Remix 是最常用的以太坊智能合约编程编辑器(IDE)。
 
 ## 1 编写与部署智能合约
 
-在《精通以太坊》中，AA给出了一个以太币水龙头（Faucet）简单程序，通过它可以获取以太币。它的功能是：
+在《精通以太坊》中，安德烈亚斯·M. 安东波罗斯（Andreas M. Antonopoulos, 简称AA）给出了一个以太币水龙头（Faucet）简单程序，通过它可以获取以太币。它的功能是：
 
 > 只要你调用它的 `withdraw()` 函数，就可以得到0.1 ether。
 
@@ -131,7 +131,7 @@ Ganache 本地测试网有两种运行方式：
 
 可以在如下网站下载与安装：https://www.trufflesuite.com/ganache
 
-### 3.1 启动Ganache，重启Metamask、Remix
+### 3.1 启动Ganache本地区块链测试网，重启Metamask、Remix
 
 ![IMAGE](/contracts/images/D48156388E700DE69718681E7474A174.jpg )
 图：Ganache本地网络，运行于127.0.0.1:78545
@@ -146,7 +146,7 @@ Ganache 本地测试网有两种运行方式：
 
 智能合约地址为：0x1af9ED785ade5b59D42e82a830AeeBB658e8972e
 
-### 3.2 与Faucet交互
+### 3.2 与Faucet合约交互
 
 - 向智能合约地址充值1 ether
 - 调用withdraw()
