--- a/_contracts/2020-03-01-metamask101.md
+++ b/_contracts/2020-03-01-metamask101.md
@@ -224,3 +224,6 @@ In these cases, the balance of your wallet is at stake: it's possible for a mali
 [https://medium.com/metamask/scaling-web3-with-signtypeddata-91d6efc8b290](https://medium.com/metamask/scaling-web3-with-signtypeddata-91d6efc8b290)
 
 [https://medium.com/metamask/eip712-is-coming-what-to-expect-and-how-to-use-it-bb92fd1a7a26](https://medium.com/metamask/eip712-is-coming-what-to-expect-and-how-to-use-it-bb92fd1a7a26)
+
+延伸阅读：
+[以太坊钱包MetaMask使用指南](https://mp.weixin.qq.com/s/iFH6-To49M0f93HYykYstg)
