--- a/_contracts/2020-09-29-ganache101.md
+++ b/_contracts/2020-09-29-ganache101.md
@@ -30,13 +30,13 @@ Ganache-cli通常与Truffle一起来使用。这里假设，你已经安装了Ga
 
 我可以这样做：
 
-1. 在电脑B上运行可以远程访问的Ganache测试网
+1 在电脑B上运行可以远程访问的Ganache测试网
 
 ```ganache-cli -h 192.168.3.15```
 
 如果未安装Ganache-cli，可用如下命令行安装：```sudo npm install -g ganache-cli ```
 
-2. 在电脑A上运行Truffle及配置
+2  在电脑A上运行Truffle及配置
 
 如果未安装Truffle，我们先安装```npm install -g truffle ```
 
@@ -61,7 +61,7 @@ truffle init
 truffle console
 ```
 
-3. 通过浏览器的Metamask连接
+3  通过浏览器的Metamask连接
 
 我们在Metamask选择自定义PRC，将PRC定义为：
 
