--- a/_contracts/2020-09-29-ganache101.md
+++ b/_contracts/2020-09-29-ganache101.md
@@ -87,7 +87,7 @@ truffle console
 参考资料：https://medium.com/ethereum-grid/forking-ethereum-mainnet-mint-your-own-dai-d8b62a82b3f7
 https://medium.com/@samajammin/how-to-interact-with-ethereums-mainnet-in-a-development-environment-with-ganache-3d8649df0876
 
-通常是与Infra结合起来使用：
+通常是与Infura结合起来使用：
 
 ganache-cli --fork https://mainnet.infura.io/v3/{infura_project_id}@{block_number}
 
