--- a/_contracts/2020-09-29-ganache101.md
+++ b/_contracts/2020-09-29-ganache101.md
@@ -89,7 +89,7 @@ https://medium.com/@samajammin/how-to-interact-with-ethereums-mainnet-in-a-devel
 
 通常是与Infura结合起来使用：
 
-ganache-cli --fork https://mainnet.infura.io/v3/{infura_project_id}@{block_number}
+```ganache-cli --fork https://mainnet.infura.io/v3/{infura_project_id}@{block_number}```
 
 ---
 ![技术指南文档](/contracts/images/techdoc.png)
