--- a/_contracts/2020-09-29-ganache101.md
+++ b/_contracts/2020-09-29-ganache101.md
@@ -11,6 +11,8 @@ Ganache-cli是常用的本地区块链测试网。这里记录几个进阶使用
 
 Ganache-cli通常与Truffle一起来使用。这里假设，你已经安装了Ganache-cli与Truffle。
 
+文档地址：https://github.com/trufflesuite/ganache-cli
+
 ## 建立一个 Ganache 本地网络
 
 ![IMAGE](/contracts/images/ganache-net-002.png)
