--- a/_contracts/2020-09-29-ganache101.md
+++ b/_contracts/2020-09-29-ganache101.md
@@ -65,13 +65,15 @@ truffle console
 
 3  通过浏览器的Metamask连接
 
-我们在Metamask选择自定义PRC，将PRC定义为：
+在电脑A，我们在Metamask选择自定义PRC，将PRC定义为：
 
 ```http://192.168.3.15:8545/```
 
 我们就可以通过MetaMask钱包与之交互。
 
 ![IMAGE](/contracts/images/ganache-net-001.png)
+
+类似地，我们也可以在linode等云上部署一个Ganache测试网络，并与之交互。
 
 参考资料:https://support.chainstack.com/hc/en-us/articles/900001783123-Using-MetaMask-with-a-remote-Ganache-CLI-node
 
