--- a/_contracts/2020-09-29-ganache101.md
+++ b/_contracts/2020-09-29-ganache101.md
@@ -95,6 +95,21 @@ https://medium.com/@samajammin/how-to-interact-with-ethereums-mainnet-in-a-devel
 
 ```ganache-cli --fork https://mainnet.infura.io/v3/{infura_project_id}@{block_number}```
 
+
+在Compound的教程中，则提供了如下一种做法：
+
+```
+ganache-cli \
+  -f https://cloudflare-eth.com/ \
+  -m "clutch captain shoe salt awake harvest setup primary inmate ugly among become" \
+  -i 999 \
+  -u 0x9759A6Ac90977b93B58547b4A71c78317f391A28
+```  
+https://medium.com/compound-finance/supplying-assets-to-the-compound-protocol-ec2cf5df5aa
+
+  
+  
+
 ---
 ![技术指南文档](/contracts/images/techdoc.png)
 
