--- a/_contracts/2020-09-29-ganache101.md
+++ b/_contracts/2020-09-29-ganache101.md
@@ -77,14 +77,14 @@ http://192.168.3.15:8545/
 
 参考资料:https://support.chainstack.com/hc/en-us/articles/900001783123-Using-MetaMask-with-a-remote-Ganache-CLI-node
 
-## 从主网分叉
+## 从主网分叉(复制主网的状态与合约)
 
 进行以太坊区块链开发时，我们经常需要做的是与链上已经部署的智能合约进行交互，这个时候我可以做的是：
 
 - 用Ganache-cli生成一个当前以太坊的主网分叉
 - 给自己的测试账号中充入资金，与分叉链进行交互。
 
-要分叉，我们可以运行如下命令行：
+要分叉主网，即复制主网的状态与合约，我们可以运行如下命令行：
 
 ```ganache-cli --fork NODE_URL```
 
