--- a/_contracts/2020-09-29-ganache101.md
+++ b/_contracts/2020-09-29-ganache101.md
@@ -107,6 +107,7 @@ ganache-cli \
 ```  
 https://medium.com/compound-finance/supplying-assets-to-the-compound-protocol-ec2cf5df5aa
 
+其中，-u 的功能是，在测试网解锁这个地址，这里是DAI的MCD_JOIN_DAI合约地址，从而在之后用所掌握的这个测试权限来生成DAI以供使用。
   
   
 
