--- a/_contracts/2020-03-01-metamask101.md
+++ b/_contracts/2020-03-01-metamask101.md
@@ -8,19 +8,21 @@ tags:
 description: MetaMask钱包 自称是“以太坊用的安全的身份金库”（ a secure identity vault for Ethereum）
 ---
 
-使用以太坊，一个常用的工具是 MetaMask 钱包，我们可以在 Chrome 等浏览器中使用<sup>*</sup>，用它来进行各种试验。MetaMask 自称是“以太坊用的安全的身份金库”（ a secure identity vault for Ethereum）。
+做以太坊和区块链开发，一个常用的工具是 MetaMask 浏览器钱包。MetaMask 自称是“以太坊用的安全的身份金库”（ a secure identity vault for Ethereum）。
 
-这里，我们来介绍逐步介绍 MetaMask 的使用。MetaMask 也是开发以太坊及应用时最常用的工具，我们用它与区块链本地测试网络、自己编写的智能合约交互。可参考：[https://www.trufflesuite.com/docs/truffle/getting-started/truffle-with-metamask](https://www.trufflesuite.com/docs/truffle/getting-started/truffle-with-metamask)
+这篇指南将逐步介绍 MetaMask 的使用。我们可以在 Chrome 等浏览器中使用<sup>*</sup>，用它来进行各种试验。
 
-除了 MetaMask 之外，我们还用到这几个工具：
+MetaMask 是开发以太坊及应用时最常用的工具，我们用它与区块链本地测试网络、自己编写的智能合约交互。你也可以参考这篇文章：[https://www.trufflesuite.com/docs/truffle/getting-started/truffle-with-metamask](https://www.trufflesuite.com/docs/truffle/getting-started/truffle-with-metamask)
+
+在本指南中，除了 MetaMask 之外，我们还用到这几个工具：
 
 - Rospten 测试网络
 - Etherscan 区块浏览器
 - Rospten 水龙头(faucet)
 
-这里是用Rospten测试网试用 MetaMask，以了解以太坊账号的使用。在一定的限制条件下，MetaMask 也可以用于管理实际的以太坊账号与数字资产。要注意，由于MetaMask是浏览器插件，它的安全等级很低。
+这里是用Rospten测试网试用 MetaMask，以了解以太坊账号的使用。
 
-MetaMask可在 Chrome Firefox Opera Brave 等浏览器中使用，现在也有 iOS 与 Android 的试验版本。网址：[https://metamask.io/](https://metamask.io/)
+在一定的限制条件下，MetaMask 也可以用于管理实际的以太坊账号与数字资产。要注意，由于MetaMask是浏览器插件，它的安全等级很低。
 
 <sub>* 本文所用 MetaMask 版本号为：7.7.5（截图时间：2020年2月22日）</sub>
 
@@ -33,25 +35,39 @@ MetaMask可在 Chrome Firefox Opera Brave 等浏览器中使用，现在也有 i
 
 我们 Chrome 浏览器安装扩展插件，以备接下来使用。由于 Chrome Plugin Store不能直接访问，请自行想办法。
 
-我们将使用 **Rospten 测试网络**。在 MetaMask 中，可以使用多个网络：以太坊主网、多种测试网络、我们自己建立的本地网络。
+我们将主要使用 **Rospten 测试网络**。在 MetaMask 中，可以使用多个网络：
+
+- 以太坊主网、
+- 多种测试网络、
+- 我们自己建立的本地网络。
 
 ### 1.2 注册 MetaMask 账号
 
-首次使用 MetaMask ，我们要注册一个它的账户，或导入一个账号。注意，这里指的是“MetaMask账号”，而不是区块链账号（地址与私钥）。我们将在下一步用 MetaMask 注册**以太坊账号**。
+首次使用 MetaMask ，我们要注册一个它的账户，或导入一个账号。
 
 ![IMAGE](/contracts/images/C3DF71C86647634E644710BBBE18EE00.jpg)
 
-注册之后，我们将有一个密码。除了密码之外，我们还可以把**助记词（“种子密语”）**备份起来，以供恢复。
+注意，这里指的是“MetaMask账号”，而不是区块链账号（地址与私钥）。我们将在下一步用 MetaMask 注册**以太坊账号**。
+
+我们先注册一个账号。
+
+注册之后，我们将有一个密码。
+
+### 1.3 助记词（“种子密语”）
+
+使用区块链钱包，除了“密码”之外，一个重要的点是助记词（“种子密语”）。
+
+我们应把**助记词（“种子密语”）**备份起来，以供恢复。
 
 ![IMAGE](/contracts/images/C50204CB47DEBD022764D10F4A025ED8.jpg)
 
-你要进行一个必备的操作：**备份密语**。
+你来进行一个必备的操作：**备份密语**。
 
 - 我们可以种子密语抄在纸上，也可以下载下来（我选择了下载，下一步将要使用）。
 
 如果在真实场景中使用，请务必保存好助记词，不要放在联网电脑中，因为如果电脑被攻击，记录助记词的文件被盗，那么对应的数字资产就被盗了。
 
-- 在这里，你会被要求明确地输入一次密语，以完成注册操作操作。请按指引完成操作。
+- 这里，你会被要求明确地输入一次密语，以完成注册操作操作。请按指引完成操作。
 
 ![IMAGE](/contracts/images/C196781088726CB05F3B9037AFAA357D.jpg)
 
@@ -59,9 +75,9 @@ MetaMask特别提示：“MetaMask 无法恢复您的种子密语。”如果时
 
 完成这一步之后，我们就可以使用 MetaMask 了。
 
-我们把所连接的网络改为“Ropsten测试网络”。这里所用的 Ropsten 网络信息，也见附录。
-
 ## 2. 以太坊账号
+
+我们将所连接的网络改为“Ropsten测试网络”，以进行接下来的使用。这里所用的 Ropsten 网络信息参见附录。
 
 在上一步，我们其实已经创建了一个以太坊账号，我们得到了一对信息：
 
@@ -146,7 +162,7 @@ MetaMask特别提示：“MetaMask 无法恢复您的种子密语。”如果时
 
 ### 3.1 从水龙头获取测试以太币
 
-为了进行转账试验，我们去 Rospten 测试网络的水龙头（https://faucet.ropsten.be/ ），免费获得仅在测试网有效的以太币。（这不是主网以太币，仅是测试币。）
+为了进行转账试验，我们去 Rospten 测试网络的水龙头（[https://faucet.ropsten.be/](https://faucet.ropsten.be/)  或 [https://faucet.metamask.io/](https://faucet.metamask.io/)），免费获得仅在测试网有效的以太币。（这不是主网以太币，仅是测试币。）
 
 ![IMAGE](/contracts/images/83BDDA31ED6CC7D95AF1765549D74691.jpg)
 [https://faucet.ropsten.be/](https://faucet.ropsten.be/)
